--- a/Clase10.html
+++ b/Clase10.html
@@ -47,13 +47,10 @@
         }
         .order{
             display: grid;
-            grid-template-columns: auto 1fr;
+            grid-template-columns: auto 1fr auto;
             gap: 16px;
             align-items: center;
-            background-color: var(--text-input-field);
-            margin-bottom: 24px;
-            border-radius: 8px;
-            padding: 0 24px;
+            margin-bottom: 12px;
             
         }
         .order p:nth-child(1){
@@ -74,37 +71,13 @@
             text-align: end;
             font-weight: bold;
         }
-        .shoppin-card {
-            display: grid;
-            grid-template-columns: auto 1fr auto auto;
-            gap: 16px;
-            margin-bottom: 24px;
-            align-items: center;
-        }
-        .shoppin-card figure {
-            margin: 0;
-        }
-        .shoppin-card figure img{
-            width: 70px;
-            height: 70px;
-            border-radius: 20px;
-            object-fit:cover ;
-        }
-        .shoppin-card p:nth-child(2){
-            color: var(--very-light-pink);
 
-        }
-        .shoppin-card p:nth-child(3){
-            font-size: var(--md);
-            font-weight: bold;
-
-        }
     </style>
 </head>
 <body>
     <div class="my-order">
         <div class="my-oder-container">
-            <h1 class="title">My Order</h1>
+            <h1 class="title">My Orders</h1>
             <div class="my-order-content">
                 <div class="order">
                     <p>
@@ -112,36 +85,40 @@
                         <span>6 articles</span>
                     </p>
                     <p>$200.00</p>
-                </div>
-
-                    <div class="shoppin-card">
-                    <figure>
-                        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg" alt="bike">
-                    </figure>
-                    <p>Bike</p>
-                    <p>$30.00</p>
-                    </div>
-                    <div class="shoppin-card">
-                    <figure>
-                        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg" alt="bike">
-                    </figure>
-                    <p>Bike</p>
-                    <p>$30.00</p>
-                    </div>
-                    <div class="shoppin-card">
-                    <figure>
-                        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg" alt="bike">
-                    </figure>
-                    <p>Bike</p>
-                    <p>$30.00</p>
-                    </div>
-                    <div class="shoppin-card">
-                    <figure>
-                        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg" alt="bike">
-                    </figure>
-                    <p>Bike</p>
-                    <p>$30.00</p>
-                    </div>
+                    <img src="./iconos/flechita.svg" alt="">
+                </div> 
+                <div class="order">
+                    <p>
+                        <span>04.25.22</span>
+                        <span>6 articles</span>
+                    </p>
+                    <p>$200.00</p>
+                    <img src="./iconos/flechita.svg" alt="">
+                </div> 
+                <div class="order">
+                    <p>
+                        <span>04.25.22</span>
+                        <span>6 articles</span>
+                    </p>
+                    <p>$200.00</p>
+                    <img src="./iconos/flechita.svg" alt="">
+                </div> 
+                <div class="order">
+                    <p>
+                        <span>04.25.22</span>
+                        <span>6 articles</span>
+                    </p>
+                    <p>$200.00</p>
+                    <img src="./iconos/flechita.svg" alt="">
+                </div> 
+                <div class="order">
+                    <p>
+                        <span>04.25.22</span>
+                        <span>6 articles</span>
+                    </p>
+                    <p>$200.00</p>
+                    <img src="./iconos/flechita.svg" alt="">
+                </div> 
              </div>
         </div>
     </div>
